--- a/donate.html
+++ b/donate.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>เกี่ยวกับมูลนิธิเรา|มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์ |Phoenix for life</title>
+    <title>มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์ |Phoenix for life</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์,Phoenixforlife,ช่วยเหลือเด็กกำพร้าและผู้ยากไร้" name="keywords">
     <meta content="มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์ |Phoenixforlife ช่วยเหลือเด็กกำพร้าและผู้ยากไร้" name="description">
@@ -68,8 +68,8 @@
     </div>
     <!-- Topbar End -->
 
-       <!-- Navbar Start -->
-       <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
+    <!-- Navbar Start -->
+    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <h1 class="m-0"style= "font-family: 'Kanit';color: #070707;"><img src="img/logo.png" alt="" style="height: 200px ;width: 200px;"></i>มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์</h1>
         </a>
@@ -97,108 +97,36 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">ติดต่อเรา</h1>
+            <h1 class="display-3 text-white mb-3 animated slideInDown">บริจาคช่วยสมทบทุนโครงการ</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="#">หน้าหลัก</a></li>
                     <li class="breadcrumb-item"><a class="text-white" href="#">หน้า</a></li>
-                    <li class="breadcrumb-item text-white active" aria-current="page">ติดต่อเรา</li>
+                    <li class="breadcrumb-item text-white active" aria-current="page">บริจาค</li>
                 </ol>
             </nav>
         </div>
     </div>
     <!-- Page Header End -->
 
-    <!-- Contact Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="row g-4">
-                <div class="col-lg-4">
-                    <div class="h-100 bg-light rounded d-flex align-items-center p-5">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white" style="width: 55px; height: 55px;">
-                            <i class="fa fa-map-marker-alt"style= "color: #070707;"></i>
-                        </div>
-                        <div class="ms-4">
-                            <p class="mb-2"style= "color: #070707;">ที่ตั้งมูลนิธิ</p>
-                            <h5 class="mb-0"style= "font-family: 'Kanit';color: #070707;">พระนครศรีอยุธยา,ประเทศไทย</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="h-100 bg-light rounded d-flex align-items-center p-5">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white" style="width: 55px; height: 55px;">
-                            <i class="fa fa-phone-alt "style= "color: #070707;"></i>
-                        </div>
-                        <div class="ms-4">
-                            <p class="mb-2"style= "color: #070707;">ติดต่อเรา</p>
-                            <h5 class="mb-0"style= "font-family: 'Kanit';color: #070707;">+063-849-3429</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="h-100 bg-light rounded d-flex align-items-center p-5">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white" style="width: 55px; height: 55px;">
-                            <i class="fa fa-envelope-open "style= "color: #070707;"></i>
-                        </div>
-                        <div class="ms-4">
-                            <p class="mb-2"style= "color: #070707;">อีเมล์</p>
-                            <h5 class="mb-0"style= "font-family: 'Kanit';color: #070707;">@mail.com</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="bg-light rounded p-5">
-                        <h2 class="d-inline-block border rounded-pill py-1 px-4"style= "font-family: 'Kanit';color: #070707;">ติดต่อหาเราหรือปรึกษาอาการทางจิตกับจิตแพทย์ระดับมืออาชีพ</h2>
-                        <h3 style= "font-family: 'Kanit';color: #fa7304;">สนใจเป็นอาสาสมัครโครงการหรือผู้ร่วมโครงการบริจาคหรือปรึกษาอาการทางจิตกับจิตแพทย์ระดับมืออาชีพ</h3>
-                        <p class="mb-4"style= "color: #070707;">เพื่อช่วยให้สังคมของเราหน้าอยู่ยิ่งขึ้น และเพื่อเยาวชนอนาคตของประเทศเรา</p>
-                        <form>
-                            <div class="row g-3">
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                        <label for="name">ชื่อ-สกุล...</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                        <label for="email">อีเมล์...</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control" id="subject" placeholder="Subject">
-                                        <label for="subject">ชื่อเรื่อง...</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-floating">
-                                        <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
-                                        <label for="message">ข้อความ...</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn w-100 py-3" type="submit"style= "color: #070707; background: linear-gradient(to right, #c02425, #f0cb35);">ส่งข้อความ</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <div class="h-100" style="min-height: 400px;">
-                        <iframe class="rounded w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d247334.53422468767!2d100.35315898810026!3d14.392418708747442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e2736f5bfd8f7f%3A0x1019237450c4860!2sPhra%20Nakhon%20Si%20Ayutthaya!5e0!3m2!1sen!2sth!4v1702091185564!5m2!1sen!2sth"
-                        frameborder="0" allowfullscreen="" aria-hidden="false"
-                        tabindex="0"></iframe>
-                    </div>
+    <!-- 404 Start -->
+    <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="container text-center">
+            <div class="row justify-content-center">
+                <div class="col-lg-6">
+                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
+                    <h1 class="display-1">404</h1>
+                    <h1 class="mb-4">Page Not Found</h1>
+                    <p class="mb-4">We’re sorry, the page you have looked for does not exist in our website! Maybe go to our home page or try to use a search?</p>
+                    <a class="btn btn-primary rounded-pill py-3 px-5" href="">Go Back To Home</a>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Contact End -->
-
-     <!-- Footer Start -->
-     <div class="container-fluid  text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s"style="background: linear-gradient(to right, #c02425, #f0cb35);">
+    <!-- 404 End -->
+        
+    <!-- Footer Start -->
+    <div class="container-fluid  text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s"style="background: linear-gradient(to right, #c02425, #f0cb35);">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
